jwt config changes